--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>AmazonDeals</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel = "icon" href="assets/img/logo-VLrZCJxvK-transformed (2).png" 
+        type = "image/x-icon">
 </head>
 <body>
   <app-root></app-root>
